--- a/styletiles.html
+++ b/styletiles.html
@@ -1,1 +1,100 @@
-<Doctype !HTML>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <meta charset="utf-8">
+  <title>Your page title here :)</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:300,400,800" rel="stylesheet">
+
+   <!-- CSS  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+ <link rel="stylesheet" href="css/style1.css">
+    <!-- Favicon
+  
+  <link rel="icon" type="image/png" href="images/favicon.png"> 
+  
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+ 
+ <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+
+
+<!--- Fonts and Typefaces --> 
+	<div class="row section1">
+	   	
+	   	<div class="twelve columns">
+	   		<h5>
+	   			<em>Typefaces</em>
+	   		</h5>
+	   	</div>
+
+	   	<div class="twelve columns main-header">
+	   		<h1>
+	   			Main Header
+	   		</h1>
+	   	</div>
+
+	   	<div class="twelve columns big-text">
+	   		<h5>
+	   			Callout, big text
+	   		</h5>
+	   		<h5>
+	   			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum turpis ut tortor posuere, quis mollis orci pharetra. Suspendisse id dignissim est. 
+	   		</h5>
+	   	</div>
+
+	   	<div class="twelve columns sub-header">
+	   		<h2>
+	   			Sub Header
+	   		</h2>
+	   	</div>
+
+	   	<div class="twelve columns big-text">
+	   		<p>
+	   			Regular Body Text
+	   		</p>
+	   		<p> Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut at gravida arcu. Ut non orci nec turpis imperdiet euismod. Duis a nunc aliquam, mollis neque sed, scelerisque erat. Curabitur pulvinar eros ipsum, et pretium ante facilisis a. Donec volutpat felis egestas orci commodo vehicula vitae eu risus. Integer tempor ligula luctus metus porttitor fermentum. Maecenas id ligula eget erat semper hendrerit.
+	   		</p>
+	   	</div>
+
+	</div>
+
+<!--- Colors --> 
+
+	<div class="row section2">
+    	
+    	<div class="twelve columns">
+    		<h5>
+    			<em>Colors</em>
+    		</h5>
+    	</div>
+
+	    <div class="row">
+	    	<div class="two columns color1"></div>
+	    	<div class="two columns color2"></div>
+	    	<div class="two columns color3"></div>
+	    	<div class="two columns color4"></div>
+	    	<div class="two columns color5"></div>
+	    	<div class="two columns color6"></div>
+	    </div>
+
+	</div>
+
+</div>
+
+</head>
+<body>
