mostly laid out

--- a/styletiles.html
+++ b/styletiles.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>Style Option 1</title>
+  <meta name="description" content="Potential styles for portfolio site, first option">
+  <meta name="author" content="Carolyn Bussey">
 
   <!-- Mobile Specific Metas  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
@@ -32,8 +32,24 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
 
+<!--- Header and navigation --> 
 
-<!--- Fonts and Typefaces --> 
+<div class= "banner">
+	   	<div class="title">
+	   		<h1>
+	   			Banner/Title
+	   		</h1>
+	   	</div>
+	   	<div class="navigation">
+		   		<ul>
+		   			<li> About </li>
+		   			<li> Work </li>
+		   			<li> Contact </li>
+		   		</ul>
+		</div>
+</div>
+
+<!--- Fonts and Typefaces 
 	<div class="row section1">
 	   	
 	   	<div class="twelve columns">
@@ -41,14 +57,27 @@
 	   			<em>Typefaces</em>
 	   		</h5>
 	   	</div>
+	</div>
 
-	   	<div class="twelve columns main-header">
+	<div class="row banner">
+	   	<div class="six columns header">
 	   		<h1>
-	   			Main Header
+	   			Banner/Title
 	   		</h1>
 	   	</div>
 
+		<div class="six columns header navigation">
+		   		<ul>
+		   			<li> About </li>
+		   			<li> Work </li>
+		   			<li> Contact </li>
+		   		</ul>
+		</div>
+   	</div>
+--> 
+   	<div class="row body-section">
 	   	<div class="twelve columns big-text">
+	   		<h5></h5>
 	   		<h5>
 	   			Callout, big text
 	   		</h5>
