--- a/styletiles.html
+++ b/styletiles.html
@@ -41,51 +41,31 @@
 	   		</h1>
 	   	</div>
 	   	<div class="navigation">
-		   		<ul>
-		   			<li> About </li>
-		   			<li> Work </li>
-		   			<li> Contact </li>
-		   		</ul>
+		   	<ul>
+		   		<li> About </li>
+		   		<li> Work </li>
+		   		<li> Contact </li>
+		   	</ul>
 		</div>
 </div>
 
-<!--- Fonts and Typefaces 
-	<div class="row section1">
-	   	
-	   	<div class="twelve columns">
-	   		<h5>
-	   			<em>Typefaces</em>
-	   		</h5>
-	   	</div>
-	</div>
+<!--- Fonts and Typefaces --> 
 
-	<div class="row banner">
-	   	<div class="six columns header">
-	   		<h1>
-	   			Banner/Title
-	   		</h1>
-	   	</div>
-
-		<div class="six columns header navigation">
-		   		<ul>
-		   			<li> About </li>
-		   			<li> Work </li>
-		   			<li> Contact </li>
-		   		</ul>
-		</div>
-   	</div>
---> 
    	<div class="row body-section">
 	   	<div class="twelve columns big-text">
 	   		<h5></h5>
 	   		<h5>
 	   			Callout, big text
-	   		</h5>
-	   		<h5>
+	   		<br>
 	   			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum turpis ut tortor posuere, quis mollis orci pharetra. Suspendisse id dignissim est. 
 	   		</h5>
 	   	</div>
-
+	<div class ="row methods-section">
+		<h3> Section Header </h3>
+		<div class = "four columns"> </div>
+		<div class = "four columns"> </div>
+		<div class = "four columns"> </div>
+	</div>
 	   	<div class="twelve columns sub-header">
 	   		<h2>
 	   			Sub Header
@@ -95,8 +75,8 @@
 	   	<div class="twelve columns big-text">
 	   		<p>
 	   			Regular Body Text
-	   		</p>
-	   		<p> Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut at gravida arcu. Ut non orci nec turpis imperdiet euismod. Duis a nunc aliquam, mollis neque sed, scelerisque erat. Curabitur pulvinar eros ipsum, et pretium ante facilisis a. Donec volutpat felis egestas orci commodo vehicula vitae eu risus. Integer tempor ligula luctus metus porttitor fermentum. Maecenas id ligula eget erat semper hendrerit.
+	   		<br>
+	   		 Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut at gravida arcu. Ut non orci nec turpis imperdiet euismod. Duis a nunc aliquam, mollis neque sed, scelerisque erat. Curabitur pulvinar eros ipsum, et pretium ante facilisis a. Donec volutpat felis egestas orci commodo vehicula vitae eu risus. Integer tempor ligula luctus metus porttitor fermentum. Maecenas id ligula eget erat semper hendrerit.
 	   		</p>
 	   	</div>
 
@@ -107,6 +87,7 @@
 	<div class="row section2">
     	
     	<div class="twelve columns">
+    		<h5></h5>
     		<h5>
     			<em>Colors</em>
     		</h5>
