--- a/styletiles.html
+++ b/styletiles.html
@@ -18,21 +18,21 @@
 <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:300,400,800" rel="stylesheet">
 
    <!-- CSS  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
- 
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
- <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="css/style1.css">
     <!-- Favicon
-  
-  <link rel="icon" type="image/png" href="images/favicon.png"> 
-  
+
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
- 
+
  <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
 
-<!--- Header and navigation --> 
+<!--- Header and navigation -->
 
 <div class= "banner">
 	   	<div class="title">
@@ -49,23 +49,47 @@
 		</div>
 </div>
 
-<!--- Fonts and Typefaces --> 
+<!--- Fonts and Typefaces -->
 
-   	<div class="row body-section">
-	   	<div class="twelve columns big-text">
+  <div class="row body-section">
+	  	<div class="twelve columns big-text">
 	   		<h5></h5>
 	   		<h5>
 	   			Callout, big text
 	   		<br>
-	   			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum turpis ut tortor posuere, quis mollis orci pharetra. Suspendisse id dignissim est. 
+	   			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dictum turpis ut tortor posuere, quis mollis orci pharetra. Suspendisse id dignissim est.
 	   		</h5>
 	   	</div>
+  </div>
+
+<!--- methods section -->
+
+<h3> Section Header </h3>
+
 	<div class ="row methods-section">
-		<h3> Section Header </h3>
-		<div class = "four columns"> </div>
-		<div class = "four columns"> </div>
-		<div class = "four columns"> </div>
-	</div>
+
+      <div class = "one-third column method">
+        <div class = "img">
+        </div>
+        <h5>A Method with a long name</h5>
+      </div>
+
+    	<div class = "one-third column method">
+        <div class = "img">
+        </div>
+        <h5>A Method with a long name</h5>
+      </div>
+
+      <div class = "one-third column method">
+        <div class = "img">
+        </div>
+        <h5>A Method with a long name</h5>
+      </div>
+
+    </div>
+
+	<div class ="row body-section">
+
 	   	<div class="twelve columns sub-header">
 	   		<h2>
 	   			Sub Header
@@ -82,12 +106,11 @@
 
 	</div>
 
-<!--- Colors --> 
+<!--- Colors -->
 
-	<div class="row section2">
-    	
+	<div class="row colors-section">
+
     	<div class="twelve columns">
-    		<h5></h5>
     		<h5>
     			<em>Colors</em>
     		</h5>
