--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="utf-8">
   <title>Style Option 1</title>
-  <meta name="description" content="Potential styles for portfolio site, first option">
+  <meta name="description" content="Potential styles for portfolio site">
   <meta name="author" content="Carolyn Bussey">
 
   <!-- Mobile Specific Metas  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -15,21 +15,33 @@
 
   <!-- FONT  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:300,400,800" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:300,400,800|Roboto+Slab:400,700|Roboto:100i,300,900i" rel="stylesheet">
+
 
    <!-- CSS  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style1.css">
+  <link rel="stylesheet" href="css/style2.css">
     <!-- Favicon
 
   <link rel="icon" type="image/png" href="images/favicon.png">
 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+</head>
+<body>
  <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+  <div id="styleButtons">
+    <div id="style2Button">
+      Button 1
+    </div>
+    <div id="style2Button">
+      Button 2
+    </div>
+  </div>
+
   <div class="container">
 
 <!--- Header and navigation -->
@@ -96,7 +108,7 @@
 	   		</h2>
 	   	</div>
 
-	   	<div class="twelve columns big-text">
+	   	<div class="twelve columns">
 	   		<p>
 	   			Regular Body Text
 	   		<br>
@@ -129,5 +141,6 @@
 
 </div>
 
-</head>
-<body>
+</body>
+
+</html>
