--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- FONT  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400i|Open+Sans:300,400,800|Roboto+Slab:400,700|Roboto:100i,300,900i" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Muli:200,200i,800" rel="stylesheet">
 <script src="./script.js" charset="utf-8"></script>
 
 
@@ -79,26 +79,29 @@
 
 <!--- methods section -->
 
-<h3> Section Header </h3>
+<h3> Methods </h3>
 
 	<div class ="row methods-section">
 
       <div class = "one-third column method">
         <div class = "img">
         </div>
-        <h5>A Method with a long name</h5>
+        <h5>Think Aloud Interview</h5>
+        <p>Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
       </div>
 
     	<div class = "one-third column method">
         <div class = "img">
         </div>
-        <h5>A Method with a long name</h5>
+        <h5>Rapid Prototyping</h5>
+        <p>Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
       </div>
 
       <div class = "one-third column method">
         <div class = "img">
         </div>
-        <h5>A Method with a long name</h5>
+        <h5>Survey and Data Analysis</h5>
+        <p>Nunc vulputate feugiat velit, sit amet volutpat orci maximus sit amet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. </p>
       </div>
 
     </div>
